--- a/plastic.html
+++ b/plastic.html
@@ -14,8 +14,44 @@
 </div>
 </head>
 <body>
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
+    <h1 id="title">Plastic</h1>
+    
+    <div id="textcontent">
+        <p>
+            Plastic. We see it everywhere, from our phone cases to our water bottles. But what exactly is plastic? And why do so many people say it’s dangerous to our environment?
+        </p>
+        <p>
+            Plastic technically refers to any material that can be shaped or molded, but is most often used to refer to synthetic polymers. These synthetic polymers are made of a vast amount of individual monomers, all combining together to form a large material. They are primarily formed through addition reactions, where molecules of the same kind react with each other to form polymers, or through condensation reactions where multiple molecules combine together while losing a particle (often water). 
+        </p>
+        <p>
+            Because plastics are a synthetic and new addition to the environment, the environment is not prepared to deal with plastics. As specifically noted by Deirde S. Blanchfield, “microorganisms that can degrade [plastics] generally have not yet had an opportunity to evolve”.<sup>1</sup>
+        </p>
+        <p>
+            A good amount of plastic ends up in landfills, but lots of plastic ends up as pollution. Because the environment does not have any ways of naturally disposing of plastic, this plastic pollution has a tendency to build up in the environment. As of 2023, the Great Pacific Garbage patch in the Pacific ocean was reported to consist of 1.8 trillion pieces of plastic, around 4 times the size of California.<sup>2</sup>
+        </p>
+        <p>
+            Blanchfield does a good job of describing the impact that this has on natural life, particularly through this lens of sea life. 
+        </p>
+        <p id="quoteblock">
+            “According to the U.S. Environmental Protection Agency (EPA), floatable debris is responsible for the deaths of more than 100,000 marine mammals and one million seabirds annually. Seals, sea lions, manatees, sea turtles, and other marine creatures often mistake debris for food, eating objects that block their intestinal tract or cause internal injury. They can also become entangled in lost fishing nets and line, or other objects.”<sup>3</sup>
+        </p>
+        <img src="images/belizeplastic.jpeg">
+        <p id="imageheading">Plastic pollution on a beach in Belize. Photo courtesy of Paul VanderMarck</p>
+        <p>
+            Even if plastic is properly disposed of into a landfill, those landfills themselves are a problem. They take up large amounts of land, rendering them uninhabitable for most life. They also produce dangerous gasses and chemicals. 
+        </p>
+        <p>
+            Clearly, plastic build up in the environment is a problem. What are some solutions?
+        </p>
+        <p>
+            One obvious solution is minimizing our use of single use plastics. You can see this in our local society in a lot of ways – the shift to paper straws from plastic, asking to use reusable water bottles instead of single use plastic ones, etc. 
+        </p>
+        <p>
+            Another common way that you see in our local environment is recycling. The core idea behind recycling is that used plastics can be remade into a new product, meaning that they don’t end up as waste in the environment. However, this has its own problems. Recycling facilities must separate different types of plastics from each other, and what plastics can be recycled depends on the facility itself. This is a good approach for some kinds of plastic, but not all, and it’s a very complex and tricky process that means something put into the recycling bin is in no way guaranteed to actually be recycled. 
+        </p>
+    </div>
+    <div id="nextbutton">
+        <a href="polyethylene.html">Next</a>
+    </div>
+    </body>
 </html> 
