finished renaming to index from main

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Plastic Awareness</title>
 <div id="menubar">
     <ul>
-        <li><a class="active" href="main.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="plastic.html">Plastic</a></li>
         <li><a href="polyethylene.html">Polyethylene</a></li>
         <li><a href="pla.html">PLA</a></li>
