--- a/plastic.html
+++ b/plastic.html
@@ -5,7 +5,7 @@
 <title>Plastic</title>
 <div id="menubar">
     <ul>
-        <li><a href="main.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a class="active" href="plastic.html">Plastic</a></li>
         <li><a href="polyethylene.html">Polyethylene</a></li>
         <li><a href="pla.html">PLA</a></li>
