--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <div id="nextbutton">
     <a href="plastic.html">Next</a>
 </div>
+<div id="footnotes">
+    <p>1. EEEEE</p>
+</div>
 
 </body>
 </html> 
