saved all changes

--- a/pla.html
+++ b/pla.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="/images/sfstreet.jpg">
 <title>PLA</title>
 <div id="menubar">
     <ul>
@@ -14,8 +15,10 @@
 </div>
 </head>
 <body>
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1 id="title">Polylactic Acid (PLA)</h1>
+<div id="textcontent">
+    
+</div>
 
 </body>
 </html> 
