--- a/polyethylene.html
+++ b/polyethylene.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="/images/sfstreet.jpg">
 <title>Polyethylene</title>
 <div id="menubar">
     <ul>
@@ -14,8 +15,24 @@
 </div>
 </head>
 <body>
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1 id="title">"Biodegradable" Starch-Polyethylene Plastic</h1>
+<div id="textcontent">
+    <p>
+        One failed attempt at making biodegradable plastics was the introduction in the 1980s of “biodegradable” polyethylene. This combined monomers of ethylene (C<sub>2</sub>H<sub>4</sub>) with small amounts of starch to create a product that appeared to degrade in the environment. In reality, however, the starch would degrade and leave very small amounts of polyethylene to persist in the environment. 
+    </p>
+    <p>
+        While the total amount of plastic left in the environment by these products is less, as the material is partially composed of a material that does degrade, these small amounts of plastic left over are still very dangerous and harmful to the environment. 
+    </p>
+    <p>
+        These small plastic particles are usually known as microplastics. Due to their small scale, they are challenging to identify and filter out of things such as water. They have been noted to remain indefinitely within the tissue of animals that ingest them, and they likely exhibit similar behaviors in humans (although humans aren’t constantly ingesting microplastics in the way that an animal swimming through a polluted ocean might). While this is an issue of starch-polyethylene biodegradable plastics, it’s important to note that microplastics are also created by the environmental weardown of many traditional plastics. 
+    </p>
+    <p>
+        This supposedly biodegradable plastic represents some of the difficulties and challenges in creating biodegradable plastics. It’s not truly biodegradable, but it’s a step in the right direction. It is also a good example of the dangers of misleading marketing. This is the driving theme behind many attempts at making biodegradable plastics, and that theme plus more will be looked at next through the idea of polylactic acid.  
+    </p>
+</div>
+<div id="nextbutton">
+    <a href="pla.html">Next</a>
+</div>
 
 </body>
 </html> 
