--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="/images/sfstreet.jpg">
 <title>Plastic Awareness</title>
 <div id="menubar">
     <ul>
