Edited PLA, Added Conclusion, Added back buttons

--- a/index.html
+++ b/index.html
@@ -6,26 +6,24 @@
 <title>Plastic Awareness</title>
 <div id="menubar">
     <ul>
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a class="active" href="index.html">Introduction</a></li>
         <li><a href="plastic.html">Plastic</a></li>
         <li><a href="polyethylene.html">Polyethylene</a></li>
         <li><a href="pla.html">PLA</a></li>
+        <li><a href="conclusion.html">Conclusion</a></li>
     </ul>
 </div>
 </head>
 <body>
-<h1 id="title">Home</h1>
+<h1 id="title">Introduction</h1>
 
 <div id="textcontent">
     <p>
-        This is a website created by me (Theo VanderMarck) to inform about the environmental impacts of plastic, as well as to provide information about the benefits and drawbacks of biodegradable plastics that are attempting to address some of these issues.
+        This is a website created by me (Theo VanderMarck) to inform about the environmental impacts of plastic, as well as to provide information about the benefits and drawbacks of "environmentally-friendly" plastics that are attempting to address some of these issues.
     </p>
 </div>
 <div id="nextbutton">
     <a href="plastic.html">Next</a>
-</div>
-<div id="footnotes">
-    <p>1. EEEEE</p>
 </div>
 
 </body>
