--- a/pla.html
+++ b/pla.html
@@ -6,10 +6,11 @@
 <title>PLA</title>
 <div id="menubar">
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Introduction</a></li>
         <li><a href="plastic.html">Plastic</a></li>
         <li><a href="polyethylene.html">Polyethylene</a></li>
         <li><a class="active" href="pla.html">PLA</a></li>
+        <li><a href="conclusion.html">Conclusion</a></li>
     </ul>
     <br>
 </div>
@@ -17,8 +18,41 @@
 <body>
 <h1 id="title">Polylactic Acid (PLA)</h1>
 <div id="textcontent">
-    
+    <p>
+        Another attempt at making an environmentally friendly (although not actually biodegradable) plastic is the introduction of Polylactic acid as a sustainable material. Polylactic acid, also known as PLA, is created from lactic acid or lactide (derived from lactic acid). While it is not biodegradable, it is remarkable for how environmentally friendly it is. 
+    </p>
+    <p>
+        It is mainly used in containers and packaging, although 3D printing often uses PLA as a common material.
+    </p>
+    <p>
+        The first reason PLA is environmentally friendly is that lactic acid can be made from plants, unlike traditional plastics based in petroleum. This means that it can be created from a renewable resource, making it infinitely renewable and producible as long as plants can be grown. It can also be produced using 65% less energy than normal plastic.<sup>1</sup>
+    </p>
+    <p>
+        Additionally, PLA can be composted in what is known as a “controlled composting environment” back down to core elements of carbon dioxide and water. This means that the entire lifecycle of PLA, from creation to disposal, leaves no lasting harmful impact on the environment.
+Or rather, that is what would happen in an ideal world. In reality, there are many caveats to this dream of a truly harmless plastic. 
+    </p>
+    <p>
+        Firstly, the material used to create the plastic must come from somewhere. While things like corn are sustainable while things like petroleum are not, using this part of the world’s food supply to create plastic is potentially removing that food from the plate of an animal or person who could use it. Mass production of plants is also harmful to the local environment.
+    </p>
+    <p>
+        Secondly, while PLA can technically be composted, practically doing so is very challenging. First, it has to make it to one of these “controlled composting environments”, which are very hard for the consumer to get their PLA to end up in – while some stores that sell PLA packaging accept it back for composting, the majority do not. And if it doesn’t end up being sent directly to one of those facilities, it can cause many problems. If they end up in recycling facilities they must be sorted out, a tedious and expensive process, and PLA products frequently end up in landfills where they will take as long to degrade as normal plastics. 
+    </p>
+    <p>
+        Thirdly, while PLA is much more sustainable than alternatives, it is still harmful to the environment. It uses less energy and produces less greenhouse gasses than traditional plastics, but that energy is still used and those greenhouse gasses are still produced.
+    </p>
+    <br>
+    <p>
+        All in all, for places where plastics have to be used, PLA is a solid alternative. However, the most effective solution to minimize plastic harm to the environment is still to switch away from using plastic when possible.
+    </p>
 </div>
-
+<div id="nextbutton">
+    <a href="conclusion.html">Next</a>
+</div>
+<div id="backbutton">
+    <a href="polyethylene.html">Back</a>
+</div>
+<div id="footnotes">
+    <p>1. Elizabeth Royte, "Corn Plastic to the Rescue," Smithsonian Magazine, August 2006, accessed May 30, 2024, https://www.smithsonianmag.com/science-nature/corn-plastic-to-the-rescue-126404720/.  </p>
+</div>
 </body>
 </html> 
