--- a/plastic.html
+++ b/plastic.html
@@ -6,10 +6,11 @@
 <title>Plastic</title>
 <div id="menubar">
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Introduction</a></li>
         <li><a class="active" href="plastic.html">Plastic</a></li>
         <li><a href="polyethylene.html">Polyethylene</a></li>
         <li><a href="pla.html">PLA</a></li>
+        <li><a href="conclusion.html">Conclusion</a></li>
     </ul>
     <br>
 </div>
@@ -51,14 +52,19 @@
             Another common way that you see in our local environment is recycling. The core idea behind recycling is that used plastics can be remade into a new product, meaning that they don’t end up as waste in the environment. However, this has its own problems. Recycling facilities must separate different types of plastics from each other, and what plastics can be recycled depends on the facility itself. This is a good approach for some kinds of plastic, but not all, and it’s a very complex and tricky process that means something put into the recycling bin is in no way guaranteed to actually be recycled. 
         </p>
         <p>
-            One controversial yet potentially very impactful way to reduce plastic waste is the development of biodegradable plastics. While the current solutions aren’t truly biodegradable – either not degrading fully or requiring a special environment to degrade – they are still interesting developments that deserve to be looked at. Specifically, I will be looking at a semi-failed attempt to create biodegradable polyethylene and the modern movement to use polylactic acid as a biodegradable replacement for some traditional plastic. 
+            One controversial yet potentially very impactful way to reduce plastic waste is the development of biodegradable plastics. While the current solutions aren’t truly biodegradable – either not degrading fully or requiring a special environment to degrade – they are still interesting developments that deserve to be looked at. Specifically, I will be looking at a semi-failed attempt to create biodegradable polyethylene and the modern movement to use polylactic acid as an environmentally friendly replacement for some traditional plastic. 
         </p>
     </div>
     <div id="nextbutton">
         <a href="polyethylene.html">Next</a>
     </div>
+    <div id="backbutton">
+        <a href="index.html">Back</a>
+    </div>
     <div id="footnotes">
-        <p>1. EEEEE</p>
+        <p>1. "Plastics," in Environmental Encyclopedia, ed. Deirde S. Blanchfield (Detroit, MI: Gale), Gale in Context: Science. </p>
+        <p>2. "Plastics."</p>
+        <p>3. "Plastics."</p>
     </div>
     </body>
 </html> 
