--- a/polyethylene.html
+++ b/polyethylene.html
@@ -6,10 +6,11 @@
 <title>Polyethylene</title>
 <div id="menubar">
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Introduction</a></li>
         <li><a href="plastic.html">Plastic</a></li>
         <li><a class="active" href="polyethylene.html">Polyethylene</a></li>
         <li><a href="pla.html">PLA</a></li>
+        <li><a href="conclusion.html">Conclusion</a></li>
     </ul>
     <br>
 </div>
@@ -32,6 +33,9 @@
 </div>
 <div id="nextbutton">
     <a href="pla.html">Next</a>
+</div>
+<div id="backbutton">
+    <a href="plastic.html">Back</a>
 </div>
 
 </body>
