--- a/conclusion.html
+++ b/conclusion.html
@@ -19,13 +19,13 @@
 <h1 id="title">Conclusion</h1>
 <div id="textcontent">
     <p>
-        The purpose of this project is to educate more about attempts to make biodegradable plastics, as well as to warn of the dangers of supposedly guilt-free, “biodegradable” or “eco-friendly” plastics.
+        The purpose of this project is to educate more about attempts to make biodegradable plastics, as well as to warn of the dangers of supposedly guilt-free, “biodegradable” or “eco-friendly” plastics. It is important to inform citizens of this Earth about the truth of "environmentally-friendly" plastics, as well as to hopefully inspire them to be more mindful with their use of plastics.
     </p>
     <p>
-        While they are steps in the right direction, we have yet to develop something that can trump the strategy of simply switching away from plastic where possible.
+        While these developments are steps in the right direction, we have yet to develop something that can trump the strategy of simply switching away from plastic where possible.
     </p>
     <p>
-        Plastics are majorly used for and by consumers, meaning that the individual actually has a lot of power in limiting the harm done to the environment through plastic waste.
+        Plastics are majorly used for and by consumers, meaning that the individual has a lot of power in limiting the harm done to the environment through plastic waste.
     </p>
     <p>
         It sounds very preachy and holier-than-thou, but the truth is if you avoid using plastics (in particular single use plastics) when possible you can have a large impact on our environment. Scientific breakthroughs are making it more environmentally friendly to use plastic, but it’s still more effective and much simpler to not use plastic when you don’t have to. 
@@ -33,11 +33,14 @@
     <p>
         Thank you for reading, and I hope you're more mindful about your plastic use!
     </p>
+    <img src="images/baliplastic.jpeg">
+        <p id="imageheading">Plastic pollution on a beach in Bali. Photo courtesy of Paul VanderMarck</p>
 
 </div>
 <div id="backbutton">
     <a href="pla.html">Back</a>
 </div>
+<div id="magic"></div>
 
 </body>
 </html> 
