--- a/pla.html
+++ b/pla.html
@@ -11,6 +11,7 @@
         <li><a href="polyethylene.html">Polyethylene</a></li>
         <li><a class="active" href="pla.html">PLA</a></li>
         <li><a href="conclusion.html">Conclusion</a></li>
+        <li><a href="bibliography.html">Bibliography</a></li>
     </ul>
     <br>
 </div>
