--- a/conclusion.html
+++ b/conclusion.html
@@ -11,6 +11,7 @@
         <li><a href="polyethylene.html">Polyethylene</a></li>
         <li><a href="pla.html">PLA</a></li>
         <li><a class="active" href="conclusion.html">Conclusion</a></li>
+        <li><a href="bibliography.html">Bibliography</a></li>
     </ul>
     <br>
 </div>
@@ -36,6 +37,9 @@
     <img src="images/baliplastic.jpeg">
         <p id="imageheading">Plastic pollution on a beach in Bali. Photo courtesy of Paul VanderMarck</p>
 
+</div>
+<div id="nextbutton">
+    <a href="bibliography.html">Next</a>
 </div>
 <div id="backbutton">
     <a href="pla.html">Back</a>
