--- a/bibliography.html
+++ b/bibliography.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="/images/sfstreet.jpg">
-<title>PLA</title>
+<title>Environmentally-Friendly Plastics</title>
 <div id="menubar">
     <ul>
         <li><a href="index.html">Introduction</a></li>
