--- a/conclusion.html
+++ b/conclusion.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-<link rel="icon" type="image/x-icon" href="/images/sfstreet.jpg">
+<link rel="icon" type="image/x-icon" href="images/sfstreet.jpg">
 <title>Environmentally-Friendly Plastics</title>
 <div id="menubar">
     <ul>
